# rinha-backend

./: .gitignore  .gitmodules
2024-q1/: .gitmodules
2024-q1/app/: .hyper.docker.env  docker-compose.hyper.yml  docker-compose.thread.yml  docker-compose.yml  haproxy.cfg  postgrest.conf
2024-q1/app/init_postgres_scripts/: 00-config.sql  01-init.db.sql  02-init.clients.sql  03-init.ledger.sql  04-init-functions.sql  05-init-read-func.sql
2024-q1/app/pgbouncer_conf/: pgbouncer.ini  userlist.txt
2024-q1/app/web/: Cargo.toml  Dockerfile  README.md
2024-q1/app/web/src/: db.rs  error.rs  main.rs  routes.rs
2024-q1/app/web_hyper/: .env  .hyper.env  Cargo.toml  Dockerfile
2024-q1/app/web_hyper/src/: db.rs  main.rs  model.rs  routes.rs
2024-q1/app/web_thread/: Cargo.toml  Dockerfile  README.md
2024-q1/app/web_thread/src/: main.rs
