[package]
name = "web"
version = "0.1.0"
edition = "2021"

[build]
rustflags = ["--cfg", "tokio_unstable"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
deadpool = "0.10.0"
deadpool-postgres = { version = "0.12.1", features = ["rt_tokio_1", "serde"] }
postgres-types = "0.2.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_postgres = "0.2.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }


