[package]
name = "web_hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
deadpool = { version = "0.10.0", features = ["rt_tokio_1"] }
deadpool-postgres = { version = "0.12.1", features = ["serde"] }
dotenv = "0.15.0"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["http1", "server", "full"] }
hyper-util = { version = "0.1.3", features = ["http1", "tokio"] }
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
validator = { version = "0.16.1", features = ["derive"] }
