[package]
name = "web_thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.7", features = ["with-serde_json-1"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
rouille = "3.6.2"
scheduled-thread-pool = "0.2.7"
serde = "1.0.197"
serde_json = "1.0.114"
